--- a/src/index.html
+++ b/src/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta name="viewport" content="width=500, initial-scale=1" />
     <title>Pokemon!</title>
   </head>
   <body>
